# wps-ci

./: .coveragerc  main.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yml
app/blog/: views.py
app/blog/migrations/: 0001_initial.py
app/config/: settings.py
