[tool.poetry]
name = "ci"
version = "0.1.0"
description = ""
authors = ["eunbiviakwon <eunbiviakwon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
coverage = "^5.0.3"
pytest = "^5.4.0"
pytest-django = "^3.8.0"
codecov = "^2.0.16"
pytest-cov = "^2.8.1"
django = "^3.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
